Validate plugin settings during boot-loading
* Validate plugin settings during boot-loading

Now we dynamically add the plugin jar-files to the classloader, so that we can
validate them before starting up neo4j server.

Before we ignored any invalid settings in the bootloader due to plugin settings.
Strict validation would then fail in the bootstrapper, resulting in some confusion
from the command line tools.